<resources>
    <string name="app_name">JeeOne</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">No Account Yet ? Create One</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="select_language">Select Language</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="log_out">Log Out</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="loading">Loading</string>
    <string name="name">Name</string>
    <string name="or">Or</string>

    <string name="item_message">Request Status</string>
    <string name="sign_in_with_google">Sign in with Google</string>

    <string-array name="languages">
        <item>English</item>
        <item>Hindi</item>
    </string-array>

    <string name="title_activity_main_ui">JeeOne</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string-array name="title">
        <item>SOS Children\'s Village</item>
        <item>PrakashDeep Trust</item>
        <item>Goonj</item>
        <item>NGO 4</item>
        <item>NGO 5</item>
        <item>NGO 6</item>
        <item>NGO 7</item>
        <item>NGO 8</item>
    </string-array>

    <string-array name="intro">
        <item> SOS Children\'s village Faridabad was established in 1987, primarily to serve as a field demonstration model for the SOS Mothers Training School.
            It is a mini SOS Children’s Village comprising of 5 houses and is home to 63 happy children. Being in the National Capital Region, it has good telecommunication, transportation, educational and medical facilities available. Facilities attached to the SOS Children’s Village include a Day Care Centre and a Learning Centre consisting of a Computer lab, Library, Music and Dance and an Activity Room. Resource persons guide children on hobbies and careers during vacation. </item>
        <item>Prakash Deep is a non-governmental, non-profit, charitable trust set up with the objective of reaching out to children left on the streets to fend for themselves while their parents go out to work.</item>
        <item>Goonj is a non-governmental organisation based in Delhi, India which undertakes disaster relief, humanitarian aid and community development in parts of 21 states across India. Goonj is the first to Highlight clothing as a basic but unaddressed need which deserves a place on the development agenda.</item>
        <item>About NGO 4</item>
        <item>About NGO 5</item>
        <item>About NGO 6</item>
        <item>About NGO 7</item>
        <item>About NGO 8</item>
    </string-array>

    <string-array name="link">
        <item>https://www.soschildrensvillages.in/where-we-work/faridabad</item>
        <item>https://www.facebook.com/prakashdeepschool/</item>
        <item>http://goonj.org/</item>
        <item>http://www.google.com</item>
        <item>http://www.google.com</item>
        <item>http://www.google.com</item>
        <item>http://www.google.com</item>
        <item>http://www.google.com</item>
    </string-array>

    <string name="group">
        Every man is an artisan of his own fortune!!!
    </string>
    <string name="aakash">
        Login\nAccount Settings\n \nLanguage Preferences
    </string>
    <string name="aman">
        Layout Design\nGraphics Design
    </string>
    <string name="archit">
        Development Credits\nFeedback\nAbout APP
    </string>
    <string name="arup">
        Cart\nHistory\n Ngo Locator Algorithm
    </string>
    <string name="harsh">
        Database\nInformation
    </string>

    <string name="aboutUs">
        "Donation is nothing but an act of presenting something as a gift, grant, or contribution "
        "to the deprived section of the society. JeeOne is an APP made to serve the purpose of "
        "donation. It is an online platform which makes it easier for you to experience the joy of "
        "giving. This APP helps people connect to the NGO\'s near their locality committed to "
        "social cause. This platform allow people to donate any kind of item they wish to in a "
        "well administered and transparent manner via the connected NGO\'s.\n\n A list of items are "
        "there in the APP to indicate the type of item the person wants to donate. All the items "
        "selected an given by people will be passed on to the people in need via the NGO\'s in a "
        "well administered manner.\n\n You can also separately list the items(Food, Clothes, "
        "Electronic Items etc.) and their conditions (Good, Moderate or Bad). Only the NGO "
        "selected will get access to the information you share(i.e. about you and your donation "
        "details). Once the NGO gets all the information, the donor will be contacted. \n\n You "
        "will be informed on every step of processing of items to maintain integrity. The "
        "shared information will be in the form of messages, images and short videos. The story of "
        "your good deed will be shared on our social page as well and also by the NGO in their own "
        "pages or magazines."
    </string>

    <string name="address">Address</string>
    <string name="phone">Phone Number</string>
    <string name="permission_denied_contacts">Permission Denied By User</string>
    <string name="retry">Retry</string>
    <string name="camera">Camera</string>
    <string name="book_donation_type">What type of Book do you want to Donate ?</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="donate_items">Donate Items</string>
    <string name="later">LATER</string>
    <string name="rate">Rate</string>
    <string name="encyclopedia">Encyclopedia</string>
    <string name="story_books">Story Books</string>
    <string name="text_books">Text Books</string>
    <string name="reference_books">Reference Books</string>
    <string name="novels">Novels</string>
    <string name="enter_the_quantity_in_approx">Enter the quantity in approx</string>
    <string name="quantity">Quantity:</string>
    <string name="cancel_item">Cancel Item</string>
    <string name="clothes_ques">Whom do you want to donate Clothes?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age_category">Age Category</string>
    <string name="_0_3_years">0 - 3 Years</string>
    <string name="_4_6_years">4 - 6 Years</string>
    <string name="_7_12_years">7 - 12 Years</string>
    <string name="_13_18_years">13 - 18 Years</string>
    <string name="_18_years">18+ Years</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="save">Save</string>
    <string name="aakash_sharma">Aakash Sharma</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google +</string>
    <string name="aman_singh_chauhan">Aman Singh Chauhan</string>
    <string name="archit_samnol">Archit Samnol</string>
    <string name="arup_kumar_gupta">Arup Kumar Gupta</string>
    <string name="harsh_kukreti">Harsh Kukreti</string>
    <string name="date">Date</string>
    <string name="donated_to">Donated to:</string>
    <string name="item_name">Enter name of the item</string>
    <string name="item_description">Enter item description</string>
    <string name="shoes_ques">Whom do you want to donate the shoes?</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="_4_shoe_size">4 shoe size</string>
    <string name="_5_shoe_size">5 shoe size</string>
    <string name="_6_shoe_size">6 shoe size</string>
    <string name="_7_shoe_size">7 shoe size</string>
    <string name="_8_shoe_size">8 shoe size</string>
    <string name="_9_shoe_size">9+ shoe size</string>
    <string name="toys_ques">What age category toys do you want to donate?</string>
    <string name="_1_3_years_toys">1-3 years toys</string>
    <string name="_4_6_years_toys">4-6 years toys</string>
    <string name="_7_12_years_toys">7-12 years toys</string>
    <string name="_13_years_toys">13+ years toys</string>
    <string name="utensils_ques">What type of utensils do you want to donate?</string>
    <string name="pressure_cooker">Pressure Cooker</string>
    <string name="frying_pans">Frying Pans</string>
    <string name="plates">Plates</string>
    <string name="glasses">Glasses</string>
    <string name="tab_clothes">CLOTHES</string>
    <string name="tab_toys">TOYS</string>
    <string name="tab_books">BOOKS</string>
    <string name="tab_utensils">UTENSILS</string>
    <string name="tab_shoes">SHOES</string>
    <string name="tab_others">OTHERS</string>
    <string name="kids">Kids</string>
    <string name="about">About</string>
    <string name="cart">Cart</string>
    <string name="history">History</string>
    <string name="ngo_list">NGO List</string>
    <string name="hall_of_fame">Hall Of Fame</string>
    <string name="communicate">Communicate</string>
    <string name="rate_us">Rate Us</string>
    <string name="feedback">Feedback</string>
    <string name="credits">Credits</string>
    <string name="gallery">Gallery</string>
    <string name="upload_picture">Upload Pictures Option</string>
    <string name="gallery_or_camera">How do you want to set your picture?</string>
    <string name="rate_us_title">Please Rate the APP</string>
    <string name="rate_us_toast_ask">Please give your Rating !!!</string>
    <string name="rate_us_toast_thanks">Thank You !!!</string>
    <string name="rate_dialog_question">Do you want to rate the APP again ?</string>
    <string name="rate_dialog_yes">Yes</string>
    <string name="rate_dialog_no">No</string>
    <!---->

</resources>
