<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/info"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/cart"
            android:title="@string/cart" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/medicalhistory"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_ngo_list"
            android:icon="@drawable/clipboard"
            android:title="@string/ngo_list" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/gallery_icon"
            android:title="@string/hall_of_fame" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_rate_us"
                android:icon="@drawable/star"
                android:title="@string/rate_us" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/feedback"
                android:title="@string/feedback" />
            <item
                android:id="@+id/nav_credits"
                android:icon="@drawable/credits"
                android:title="@string/credits" />
        </menu>
    </item>

</menu>
