<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragmentBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_height="match_parent"
                android:padding="10dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:id="@+id/utensilsImage"
                    android:background="@drawable/utensils"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/utensilsQues"
                    android:layout_below="@+id/utensilsImage"
                    android:layout_marginTop="20dp"
                    android:text="@string/utensils_ques"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:textSize="15sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/utensilsQuesLayout"
                    android:layout_below="@+id/utensilsQues"
                    android:layout_marginTop="10dp">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorPrimary"
                        android:text="@string/pressure_cooker"
                        android:id="@+id/pressureCooker"
                        android:textColor="@color/colorPrimary"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/frying_pans"
                        android:id="@+id/fryingPans"
                        android:buttonTint="@color/colorPrimary"
                        android:textColor="@color/colorPrimary"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/plates"
                        android:id="@+id/plates"
                        android:textColor="@color/colorPrimary"
                        android:buttonTint="@color/colorPrimary"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/glasses"
                        android:id="@+id/glass"
                        android:buttonTint="@color/colorPrimary"
                        android:textColor="@color/colorPrimary"/>
                </LinearLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_quantity_layout"
                    android:layout_below="@+id/utensilsQuesLayout"
                    android:layout_marginTop="50dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:hint="@string/enter_the_quantity_in_approx"
                        android:ems="@android:integer/config_longAnimTime"
                        android:id="@+id/edit_quantity"/>
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/utensils_page"
                    android:onClick="sendItemsToCart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/edit_quantity_layout"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/fragmentBackground"
                    android:text="@string/add_to_cart"
                    android:textSize="20sp"/>
            </RelativeLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>